log
Mon 06 May 2024 06:59:09 PM UTC: 
 tests:  1|8
total_score: 0/70
9715a69
Mon 06 May 2024 07:01:46 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: unknown type name ‘Treemap’; did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |     ^~~~~~~
      |     TreeMap
treemap.c:41:22: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                      ^~~~~~~
      |                      TreeMap
treemap.c:41:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:31: error: expected expression before ‘)’ token
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                               ^
treemap.c:42:9: error: request for member ‘root’ in something not a structure or union
   42 |     tree->root = NULL;
      |         ^~
treemap.c:43:9: error: request for member ‘current’ in something not a structure or union
   43 |     tree->current = NULL;
      |         ^~
treemap.c:44:9: error: request for member ‘lower_than’ in something not a structure or union
   44 |     tree->lower_than = lower_than;
      |         ^~
treemap.c:45:12: error: returning ‘int *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
c2afa20
Mon 06 May 2024 07:03:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3379dc9
Mon 06 May 2024 07:10:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
428f94e
Mon 06 May 2024 07:11:34 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
95aca97
Mon 06 May 2024 07:12:24 PM UTC: 
 treemap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  4|7
total_score: 5/70
697a53c
Mon 06 May 2024 07:18:35 PM UTC: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1be322a
Mon 06 May 2024 07:22:39 PM UTC: 
 treemap.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  5|6
total_score: 5/70
73bed55
Mon 06 May 2024 07:27:19 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:132:64: error: expected statement before ‘)’ token
  132 |         if (is_equal(tree, tree->current->pair->key, key) == 1))
      |                                                                ^
treemap.c:136:9: error: ‘else’ without a previous ‘if’
  136 |         else
      |         ^~~~
Compilation failed
45e9d8d
Mon 06 May 2024 07:27:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
01356ba
Mon 06 May 2024 07:29:08 PM UTC: 
 treemap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:128:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  128 |     TreeNode *aux = tree->root;
      |               ^~~
treemap.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b8a79c7
Mon 06 May 2024 07:29:50 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:138:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  138 |                 return tree->current->left;
      |                        ~~~~~~~~~~~~~^~~~~~
treemap.c:142:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  142 |                 return tree->current->right;
      |                        ~~~~~~~~~~~~~^~~~~~~
treemap.c:128:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  128 |     TreeNode *aux = tree->root;
      |               ^~~
treemap.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
  146 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55baec4
Mon 06 May 2024 07:29:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:137:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  137 |                 return tree->current->left;
      |                        ~~~~~~~~~~~~~^~~~~~
treemap.c:141:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  141 |                 return tree->current->right;
      |                        ~~~~~~~~~~~~~^~~~~~~
treemap.c:145:1: error: control reaches end of non-void function [-Werror=return-type]
  145 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
690f02a
Mon 06 May 2024 07:34:21 PM UTC: 
 treemap.c | 26 +++++++++-----------------
 1 file changed, 9 insertions(+), 17 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:120:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  120 |     TreeNode *aux = tree->root;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
ed518d5
Mon 06 May 2024 07:34:36 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
7b5c648
Mon 06 May 2024 07:38:35 PM UTC: 
 treemap.c | 57 +++++++++++++++++++++++++--------------------------------
 1 file changed, 25 insertions(+), 32 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:54:15: error: unused variable ‘aux’ [-Werror=unused-variable]
   54 |     TreeNode *aux = tree->root;
      |               ^~~
treemap.c: In function ‘firstTreeMap’:
treemap.c:137:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  137 |     TreeNode *aux = minimum(tree->root);
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
b617ceb
Mon 06 May 2024 07:39:16 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:54:15: error: unused variable ‘aux’ [-Werror=unused-variable]
   54 |     TreeNode *aux = tree->root;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
34674a0
Mon 06 May 2024 07:39:44 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 5/70
feb6a42
Mon 06 May 2024 07:40:17 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
52230c0
Mon 06 May 2024 07:40:45 PM UTC: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:139:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  139 |     TreeNode *aux = minimum(tree->root);
      |               ^~~
treemap.c:141:1: error: control reaches end of non-void function [-Werror=return-type]
  141 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
93b3c05
Mon 06 May 2024 07:41:01 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|5
total_score: 10/70
7472b12
Wed 08 May 2024 06:32:53 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
f3d4742
Wed 08 May 2024 06:34:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:150:29: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  150 |         tree->current->pair = minimum(tree->current->right);
      |                             ^
cc1: all warnings being treated as errors
Compilation failed
5f47afa
